--- a/index.html
+++ b/index.html
@@ -10,50 +10,62 @@
 
     body {
       font-family: 'Quicksand', sans-serif;
-      /* background: #e6e6e6; */
       background-image: url(./tlo2.avif);
       color: #333;
       margin: 0;
       padding: 0;
       height: 100vh;
       display: flex;
-      justify-content: center;
+      flex-direction: column;
       align-items: center;
       background-size: cover;
       background-position: center;
     }
 
+    header {
+      position: relative;
+      width: 100%;
+    }
+
+    .logo-container {
+      text-align: center;
+      padding-top: 20px;
+      z-index: 10;
+    }
+
+    .logo-container img {
+      height: 300px;
+      width: auto;
+    }
+
+    .custom-header {
+      background-color: #f5f5f0; /* złamana biel */
+      height: 330px; /* 10% wyższa niż logo (300px + 10%) */
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      z-index: 1;
+      position: relative;
+    }
+
     h1 {
       text-align: center;
       color: #c62828;
-      font-size: 2.5em;
+      font-size: 30px;
       margin-bottom: 20px;
     }
 
     .container {
-      /* background: linear-gradient(135deg, #fafcfb,); */
       background: linear-gradient(135deg, rgba(250, 252, 251, 0.3), rgba(224, 224, 224, 0.3));
       padding: 30px;
       border-radius: 12px;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
       width: 100%;
-      max-width: 600px;
-      position: relative;
-      overflow: hidden;
+      max-width: 400px;
+      margin-top: 30px;
     }
-/* 
-    .container::before {
-      content: '';
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      width: 100%;
-      height: 100%;
-      background: url('./logo.png') no-repeat center center;
-      background-size: contain;
-      opacity: 0.2;
-      z-index: -1;
-    } */
 
     form {
       display: flex;
@@ -108,6 +120,12 @@
   </style>
 </head>
 <body>
+
+  <header>
+    <div class="custom-header logo-container">
+      <img src="./logo 4.png" alt="White Lotus Logo">
+    </div>
+  </header>
 
   <div class="container">
     <h1>Kalkulator Feng Shui</h1>
