--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>White Lotus</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&display=swap');
+   @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600;700&family=Quicksand:wght@400;600;700&display=swap');
+
 
     body {
       font-family: 'Quicksand', sans-serif;
@@ -24,26 +25,29 @@
 
     header {
       position: relative;
-      width: 100%;
+      width: 90%;
+      margin-top: 30px;
     }
 
     .logo-container {
-      text-align: center;
-      padding-top: 20px;
+      /* padding-top: 20px; */
+      padding-left: 40px;
       z-index: 10;
     }
 
     .logo-container img {
       height: 300px;
       width: auto;
+      border-radius: 5%;
     }
 
     .custom-header {
-      background-color: #f5f5f0; /* złamana biel */
+      background-color: #f9f9f9;
+      background-image: url();
+
       height: 330px; /* 10% wyższa niż logo (300px + 10%) */
       width: 100%;
       display: flex;
-      justify-content: center;
       align-items: center;
       text-align: center;
       z-index: 1;
@@ -55,6 +59,7 @@
       color: #c62828;
       font-size: 30px;
       margin-bottom: 20px;
+      font-family: 'Cormorant Garamond', serif;
     }
 
     .container {
@@ -123,12 +128,12 @@
 
   <header>
     <div class="custom-header logo-container">
-      <img src="./logo 4.png" alt="White Lotus Logo">
+      <img src="./logo.png" alt="White Lotus Logo">
     </div>
   </header>
 
   <div class="container">
-    <h1>Kalkulator Feng Shui</h1>
+    <h1>Kalkulator<br> Feng Shui</h1>
 
     <form onsubmit="event.preventDefault(); calculateFengShuiProfile();">
       <label for="birthYear">Rok urodzenia:</label>
