--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
   <link rel="shortcut icon" href="./favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>White Lotus</title>
+
+  <!-- Importowanie czcionek z Google Fonts -->
   <style>
-   @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600;700&family=Quicksand:wght@400;600;700&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600;700&family=Quicksand:wght@400;600;700&display=swap');
 
-
+    /* Globalne style */
     body {
       font-family: 'Quicksand', sans-serif;
       background-image: url(./tlo2.avif);
@@ -23,37 +25,59 @@
       background-position: center;
     }
 
+    /* Nagłówek */
     header {
       position: relative;
       width: 90%;
       margin-top: 30px;
     }
 
+    .custom-header {
+      background-image: url(./header.png);
+      height: 330px; /* 10% wyższa niż logo (300px + 10%) */
+      width: 100%;
+      display: flex;
+      z-index: 1;
+      position: relative;
+      background-size: 100% 100%;
+      background-position: right;
+      background-repeat: no-repeat;
+    }
+
     .logo-container {
-      /* padding-top: 20px; */
       padding-left: 40px;
       z-index: 10;
+      align-items: center;
     }
 
     .logo-container img {
-      height: 300px;
+      height: 250px;
       width: auto;
       border-radius: 5%;
     }
 
-    .custom-header {
-      background-color: #f9f9f9;
-      background-image: url();
-
-      height: 330px; /* 10% wyższa niż logo (300px + 10%) */
+    .header-links {
       width: 100%;
+      position: absolute;
+      bottom: 10px;
       display: flex;
-      align-items: center;
-      text-align: center;
-      z-index: 1;
-      position: relative;
+      justify-content: center;
     }
 
+    .header-links a {
+      margin-left: 20px;
+      margin-right: 20px;
+      text-decoration: none;
+      color: #c9a036;
+      font-weight: bold;
+      font-size: 20px;
+    }
+
+    .header-links a:hover {
+      color: #607d8b;
+    }
+
+    /* Styl dla nagłówka */
     h1 {
       text-align: center;
       color: #c62828;
@@ -62,6 +86,7 @@
       font-family: 'Cormorant Garamond', serif;
     }
 
+    /* Formularz kalkulatora */
     .container {
       background: linear-gradient(135deg, rgba(250, 252, 251, 0.3), rgba(224, 224, 224, 0.3));
       padding: 30px;
@@ -106,6 +131,7 @@
       background-color: #607d8b;
     }
 
+    /* Sekcje wyników */
     .result-section {
       margin-top: 20px;
       padding: 15px;
@@ -122,6 +148,42 @@
     ul {
       padding-left: 20px;
     }
+
+    /* Style dla okien modalnych */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 1000;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background-color: rgba(0,0,0,0.4);
+    }
+
+    .modal-content {
+      background-color: #fefefe;
+      margin: 15% auto;
+      padding: 20px;
+      border: 1px solid #888;
+      width: 80%;
+      max-width: 500px;
+    }
+
+    .close {
+      color: #aaa;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+    }
+
+    .close:hover,
+    .close:focus {
+      color: black;
+      text-decoration: none;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
@@ -129,6 +191,11 @@
   <header>
     <div class="custom-header logo-container">
       <img src="./logo.png" alt="White Lotus Logo">
+      <nav class="header-links">
+        <a href="#" onclick="openModal('modal1')">Podstrona 1</a>
+        <a href="#" onclick="openModal('modal2')">Podstrona 2</a>
+        <a href="#" onclick="openModal('modal3')">Podstrona 3</a>
+      </nav>
     </div>
   </header>
 
@@ -155,6 +222,31 @@
     </form>
 
     <div id="results" style="display:none; margin-top:30px;"></div>
+  </div>
+
+  <!-- Okna modalne -->
+  <div id="modal1" class="modal">
+    <div class="modal-content">
+      <span class="close" onclick="closeModal('modal1')">&times;</span>
+      <h2>Podstrona 1</h2>
+      <p>Treść podstrony 1...</p>
+    </div>
+  </div>
+
+  <div id="modal2" class="modal">
+    <div class="modal-content">
+      <span class="close" onclick="closeModal('modal2')">&times;</span>
+      <h2>Podstrona 2</h2>
+      <p>Treść podstrony 2...</p>
+    </div>
+  </div>
+
+  <div id="modal3" class="modal">
+    <div class="modal-content">
+      <span class="close" onclick="closeModal('modal3')">&times;</span>
+      <h2>Podstrona 3</h2>
+      <p>Treść podstrony 3...</p>
+    </div>
   </div>
 
   <script>
@@ -278,6 +370,25 @@
         </div>
       `;
       resultsDiv.style.display = 'block';
+    }
+
+    // Obsługa modalnych okien
+    function openModal(modalId) {
+      document.getElementById(modalId).style.display = "block";
+    }
+
+    function closeModal(modalId) {
+      document.getElementById(modalId).style.display = "none";
+    }
+
+    // Kliknięcie poza modalem zamyka okno
+    window.onclick = function(event) {
+      const modals = document.querySelectorAll('.modal');
+      modals.forEach(function(modal) {
+        if (event.target === modal) {
+          modal.style.display = "none";
+        }
+      });
     }
   </script>
 </body>
