--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     /* Globalne style */
     body {
       font-family: 'Quicksand', sans-serif;
-      background-image: url(./images/tlo2.avif);
+      background-image: url(./images/tlo\ 2.png);
       color: #333;
       margin: 0;
       padding: 0;
