--- a/index.html
+++ b/index.html
@@ -5,189 +5,9 @@
   <link rel="shortcut icon" href="./images/favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>White Lotus</title>
-
-  <!-- Importowanie czcionek z Google Fonts -->
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600;700&family=Quicksand:wght@400;600;700&display=swap');
-
-    /* Globalne style */
-    body {
-      font-family: 'Quicksand', sans-serif;
-      background-image: url(./images/tlo\ 2.png);
-      color: #333;
-      margin: 0;
-      padding: 0;
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      background-size: cover;
-      background-position: center;
-    }
-
-    /* Nagłówek */
-    header {
-      position: relative;
-      width: 90%;
-      margin-top: 30px;
-    }
-
-    .custom-header {
-      background-image: url(./images/header.png);
-      height: 330px; /* 10% wyższa niż logo (300px + 10%) */
-      width: 100%;
-      display: flex;
-      z-index: 1;
-      position: relative;
-      background-size: 100% 100%;
-      background-position: right;
-      background-repeat: no-repeat;
-    }
-
-    .logo-container {
-      padding-left: 40px;
-      z-index: 10;
-      align-items: center;
-    }
-
-    .logo-container img {
-      height: 250px;
-      width: auto;
-      border-radius: 5%;
-    }
-
-    .header-links {
-      width: 100%;
-      position: absolute;
-      bottom: 10px;
-      display: flex;
-      justify-content: center;
-    }
-
-    .header-links a {
-      margin-left: 20px;
-      margin-right: 20px;
-      text-decoration: none;
-      color: #c9a036;
-      font-weight: bold;
-      font-size: 20px;
-    }
-
-    .header-links a:hover {
-      color: #607d8b;
-    }
-
-    /* Styl dla nagłówka */
-    h1 {
-      text-align: center;
-      color: #c62828;
-      font-size: 30px;
-      margin-bottom: 20px;
-      font-family: 'Cormorant Garamond', serif;
-    }
-
-    /* Formularz kalkulatora */
-    .container {
-      background: linear-gradient(135deg, rgba(250, 252, 251, 0.3), rgba(224, 224, 224, 0.3));
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-      width: 100%;
-      max-width: 400px;
-      margin-top: 30px;
-    }
-
-    form {
-      display: flex;
-      flex-direction: column;
-    }
-
-    label {
-      margin-bottom: 8px;
-      font-weight: 600;
-      color: #c62828;
-    }
-
-    input, select {
-      padding: 10px;
-      margin-bottom: 15px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      font-size: 1em;
-    }
-
-    button {
-      padding: 12px;
-      background-color: #78909c;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      font-size: 1.1em;
-      transition: background-color 0.3s;
-    }
-
-    button:hover {
-      background-color: #607d8b;
-    }
-
-    /* Sekcje wyników */
-    .result-section {
-      margin-top: 20px;
-      padding: 15px;
-      background: #f9f9f9;
-      border-left: 5px solid #c9a036;
-      border-radius: 8px;
-    }
-
-    .highlight {
-      color: #c9a036;
-      font-weight: bold;
-    }
-
-    ul {
-      padding-left: 20px;
-    }
-
-    /* Style dla okien modalnych */
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 1000;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      overflow: auto;
-      background-color: rgba(0,0,0,0.4);
-    }
-
-    .modal-content {
-      background-color: #fefefe;
-      margin: 15% auto;
-      padding: 20px;
-      border: 1px solid #888;
-      width: 80%;
-      max-width: 500px;
-    }
-
-    .close {
-      color: #aaa;
-      float: right;
-      font-size: 28px;
-      font-weight: bold;
-    }
-
-    .close:hover,
-    .close:focus {
-      color: black;
-      text-decoration: none;
-      cursor: pointer;
-    }
-  </style>
+  <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
-
   <header>
     <div class="custom-header logo-container">
       <img src="./images/logo.png" alt="White Lotus Logo">
@@ -196,12 +16,16 @@
         <a href="#" onclick="openModal('modal2')">Podstrona 2</a>
         <a href="#" onclick="openModal('modal3')">Podstrona 3</a>
       </nav>
+      <!-- Ikona hamburgera -->
+    <div class="hamburger" id="hamburger-menu" onclick="toggleMenu()">
+      <div class="bar"></div>
+      <div class="bar"></div>
+      <div class="bar"></div>
+    </div>
     </div>
   </header>
-
   <div class="container">
     <h1>Kalkulator<br> Feng Shui</h1>
-
     <form onsubmit="event.preventDefault(); calculateFengShuiProfile();">
       <label for="birthYear">Rok urodzenia:</label>
       <input type="number" id="birthYear" required>
@@ -217,18 +41,14 @@
         <option value="male">Mężczyzna</option>
         <option value="female">Kobieta</option>
       </select>
-
       <button type="submit">Oblicz profil</button>
     </form>
-
     <div id="results" style="display:none; margin-top:30px;"></div>
   </div>
-
   <div id="modals-container"></div>
-
   </script>
   <script src="scripts/modal.js"></script>
   <script src="scripts/fengshui.js"></script>
-  
+  <script src="scripts/hamburger.js"></script>
 </body>
 </html>
