added hamburger menu

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <div class="custom-header logo-container">
       <img src="./images/logo.png" alt="White Lotus Logo">
-      <nav class="header-links">
+      <nav class="header-links" id="nav-links">
         <a href="#" onclick="openModal('modal1')">Podstrona 1</a>
         <a href="#" onclick="openModal('modal2')">Podstrona 2</a>
         <a href="#" onclick="openModal('modal3')">Podstrona 3</a>
