--- a/modals/modal3.html
+++ b/modals/modal3.html
@@ -1,7 +1,29 @@
 <div id="modal3" class="modal">
-    <div class="modal-content">
-      <span class="close" onclick="closeModal('modal3')">&times;</span>
-      <h2>Podstrona 3</h2>
-      <p>Treść podstrony 3...</p>
+  <div class="modal-content">
+    <span class="close" onclick="closeModal('modal3')">&times;</span>
+    <div class="container">
+      <h1>
+        Kalkulator<br />
+        Feng Shui
+      </h1>
+      <form onsubmit="event.preventDefault(); calculateFengShuiProfile();">
+        <label for="birthYear">Rok urodzenia:</label>
+        <input type="number" id="birthYear" required />
+
+        <label for="birthMonth">Miesiąc urodzenia:</label>
+        <input type="number" id="birthMonth" required />
+
+        <label for="birthDay">Dzień urodzenia:</label>
+        <input type="number" id="birthDay" required />
+
+        <label for="gender">Płeć:</label>
+        <select id="gender" required>
+          <option value="male">Mężczyzna</option>
+          <option value="female">Kobieta</option>
+        </select>
+        <button type="submit">Oblicz profil</button>
+      </form>
+      <div id="results" style="display: none; margin-top: 30px"></div>
     </div>
   </div>
+</div>
