changes for mobile and tablet

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="links-wrapper">
         <a href="#" onclick="openModal('modal1')">Podstrona 1</a>
         <a href="#" onclick="openModal('modal2')">Podstrona 2</a>
-        <a href="#" onclick="openModal('modal3')">Kalkulator</a>
+        <a href="#" onclick="openModal('kalkulator')">Kalkulator</a>
         </div>
       </nav>
       <!-- Ikona hamburgera -->
@@ -29,15 +29,15 @@
    <section class="aboutFengShui">
     <div class="text-Fengshui"> <h2>O FENG SHUI <br></h2>
 <p>&nbsp;</p>
-Feng oznacza wiatr, a Shui wodę. W kulturze chińskiej wiatr i woda są<br>
-kojarzone z dobrym zdrowiem, dlatego dobre Feng Shui zaczęło<br>
-oznaczać szczęście, podczas gdy złe Feng Shui oznacza pecha lub<br>
-nieszczęście.
+<strong>Feng</strong> oznacza wiatr, a <strong>Shui</strong> wodę. W kulturze chińskiej wiatr i woda<br>
+są kojarzone z dobrym zdrowiem, dlatego dobre Feng Shui zaczęło<br>
+oznaczać szczęście, podczas gdy złe Feng Shui oznacza pecha<br>
+lub nieszczęście.
 <p>&nbsp;</p>
 Feng Shui opiera się na Taoistycznej wizji i rozumieniu natury,<br> w szczególności na idei, że ziemia jest żywa i wypełniona Chi,<br> czyli energią.
 <p>&nbsp;</p>
-Starożytni Chińczycy wierzyli, że energia konkretnej ziemi może albo<br>
-stworzyć, albo zniszczyć królestwo. Teorie yin i yang,<br>
+Starożytni Chińczycy wierzyli, że energia konkretnej ziemi może<br>
+albo stworzyć, albo zniszczyć królestwo. Teorie yin i yang,<br>
 a także pięć elementów feng shui, to niektóre z podstawowych<br>
 aspektów analizy feng Shui, które pochodzą z Taoizmu.</div>
 <div class="img-Fengshui"><img src="./images/fengShui.jpg" alt="kompas chiński"></div>
