--- a/modals/kalkulator.html
+++ b/modals/kalkulator.html
@@ -1,6 +1,6 @@
-<div id="modal3" class="modal">
+<div id="kalkulator" class="modal">
   <div class="modal-content">
-    <span class="close" onclick="closeModal('modal3')">&times;</span>
+    <span class="close" onclick="closeModal('kalkulator')">&times;</span>
     <div class="container">
       <h1>
         Kalkulator<br />
