changed for mobile and tablet

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   </header>
    <div class="main-content">
    <section class="aboutFengShui">
+    <div class="shadow">
     <div class="text-Fengshui"> <h2>O FENG SHUI <br></h2>
 <p>&nbsp;</p>
 <strong>Feng</strong> oznacza wiatr, a <strong>Shui</strong> wodę. W kulturze chińskiej wiatr i woda<br>
@@ -41,7 +42,7 @@ albo stworzyć, albo zniszczyć królestwo. Teorie yin i yang,<br>
 a także pięć elementów feng shui, to niektóre z podstawowych<br>
 aspektów analizy feng Shui, które pochodzą z Taoizmu.</div>
 <div class="img-Fengshui"><img src="./images/fengShui.jpg" alt="kompas chiński"></div>
-</section>
+</div></section>
 
 </div>
   <footer class="custom-footer">
