--- a/modals/kalkulator.html
+++ b/modals/kalkulator.html
@@ -2,27 +2,27 @@
   <div class="modal-content">
     <span class="close" onclick="closeModal('kalkulator')">&times;</span>
     <div class="container">
-      <h1>
-        Kalkulator<br />
-        Feng Shui
-      </h1>
+      <h1>Kalkulator<br />Feng Shui</h1>
       <form onsubmit="event.preventDefault(); calculateFengShuiProfile();">
         <label for="birthYear">Rok urodzenia:</label>
-        <input type="number" id="birthYear" required />
+        <input type="number" id="birthYear" min="1900" max="2100" required />
 
         <label for="birthMonth">Miesiąc urodzenia:</label>
-        <input type="number" id="birthMonth" required />
+        <input type="number" id="birthMonth" min="1" max="12" required />
 
         <label for="birthDay">Dzień urodzenia:</label>
-        <input type="number" id="birthDay" required />
+        <input type="number" id="birthDay" min="1" max="31" required />
 
         <label for="gender">Płeć:</label>
         <select id="gender" required>
+          <option value="">-- wybierz --</option>
           <option value="male">Mężczyzna</option>
           <option value="female">Kobieta</option>
         </select>
+
         <button type="submit">Oblicz profil</button>
       </form>
+
       <div id="results" style="display: none; margin-top: 30px"></div>
     </div>
   </div>
