changed css na sass

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
   <link rel="shortcut icon" href="./images/favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>White Lotus</title>
-  <link rel="stylesheet" href="./styles/styles.css">
+  <link rel="stylesheet" href="./css/main.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600;700&family=Quicksand:wght@400;600;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
   <header>
@@ -18,7 +22,7 @@
         </div>
       </nav>
       <!-- Ikona hamburgera -->
-    <div class="hamburger" id="hamburger-menu" onclick="toggleMenu()">
+    <div class="hamburger" id="hamburger-menu">
       <div class="bar"></div>
       <div class="bar"></div>
       <div class="bar"></div>
