added logo to header in mobile and tablet

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8">
-  <link rel="shortcut icon" href="./images/favicon.png">
+  <link rel="shortcut icon" href="./images/grafika.png"type="image/png" sizes="45x45">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>White Lotus</title>
   <link rel="stylesheet" href="./css/main.css">
@@ -16,8 +16,8 @@
     <div class="custom-header">
       <nav class="header-links" id="nav-links">
         <div class="links-wrapper">
-        <a href="#" onclick="openModal('modal1')">Podstrona 1</a>
-        <a href="#" onclick="openModal('modal2')">Podstrona 2</a>
+        <a href="#" onclick="openModal('modal1')">O nas</a>
+        <a href="#" onclick="openModal('modal2')">Blog</a>
         <a href="#" onclick="openModal('kalkulator')">Kalkulator</a>
         </div>
       </nav>
