--- a/modals/modal1.html
+++ b/modals/modal1.html
@@ -1,7 +1,7 @@
 <div id="modal1" class="modal">
-    <div class="modal-content">
-      <span class="close" onclick="closeModal('modal1')">&times;</span>
-      <h2>Podstrona 1</h2>
-      <p>Treść podstrony 1...</p>
-    </div>
+  <div class="modal-content">
+    <span class="close" onclick="closeModal('modal1')">&times;</span>
+    <h2>O nas</h2>
+    <p>cdn...</p>
   </div>
+</div>
