changed modal and shop js

--- a/modals/shop.html
+++ b/modals/shop.html
@@ -47,8 +47,11 @@
     <div class="submit">
       <h3>Koszyk</h3>
       <ul id="cart"></ul>
+      <!-- Tutaj będą dodawane elementy koszyka -->
       <p>Suma: <span id="total">0</span> zł</p>
+      <!-- Tutaj wyświetlana będzie suma -->
       <button id="checkout">Zamów</button>
+      <!-- Przycisk do zamówienia -->
     </div>
   </div>
 </div>
