--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
       </div>
     </footer>
     <div id="modals-container"></div>
-    <script src="scripts/modal.js"></script>
     <script src="scripts/fengshui.js"></script>
     <script src="scripts/hamburger.js"></script>
     <script src="scripts/shop.js"></script>
+    <script src="scripts/modal.js" defer></script>
   </body>
 </html>
