added paypal payment

--- a/modals/shop.html
+++ b/modals/shop.html
@@ -51,6 +51,7 @@
       <p>Suma: <span id="total">0</span> zł</p>
       <!-- Tutaj wyświetlana będzie suma -->
       <button id="checkout">Zamów</button>
+      <div id="paypal-button-container"></div>
       <!-- Przycisk do zamówienia -->
     </div>
   </div>
