--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
       href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600;700&family=Quicksand:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
+    <script
+      type="text/javascript"
+      src="https://cdn.emailjs.com/dist/email.min.js"
+    ></script>
     <script src="https://www.paypal.com/sdk/js?client-id=AVb-LIgyje56sh1EUwLW1jtdyZv1UBcWejZfgbvw81TkY6tJNvDzz4XuGbhdQEBQHRSuRARHh0v_avob&currency=PLN"></script>
   </head>
   <body>
