added section aboutUS

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600;700&family=Quicksand:wght@400;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600;700&family=Quicksand:wght@400;600;700&family=Lustria&display=swap"
       rel="stylesheet"
     />
     <script
@@ -45,7 +45,7 @@
       <section class="aboutFengShui">
         <div class="shadow">
           <div class="text-Fengshui">
-            <h1>O FENG SHUI <br /></h1>
+            <h1>o feng shui <br /></h1>
             <p>&nbsp;</p>
             <strong>Feng</strong> oznacza wiatr, a <strong>Shui</strong> wodę. W
             kulturze chińskiej wiatr i woda<br />
@@ -65,6 +65,39 @@
           <div class="img-Fengshui">
             <img src="./images/fengShui.jpg" alt="kompas chiński" />
           </div>
+        </div>
+      </section>
+      <section class="aboutUs">
+        <div class="text-aboutUs shadow-aboutUs">
+          <h3>o nas <br /></h3>
+          <p>&nbsp;</p>
+          Dwie kobiety -dwa Węże, które łączy nie tylko przyjaźń ,ale i głębokie
+          zrozumienie tego , co niewidzialne a kluczowe - ENERGII . Jedna z nas
+          to urodzona o świcie -MISTRZYNI ZIEMI Yin - z korzeniami sięgającymi
+          chińskiej metafizyki, psychologii przestrzeni i estetyki . Druga - to
+          OGIEŃ NOWEGO POKOLENIA: błyskotliwa, konkretna i intuicyjna z pasją do
+          porządku i harmonii, która nie boi się zadawać trudnych pytań i
+          znajdować prostych odpowiedzi. Wspólnie tworzymy świadomą przestrzeń,
+          gdzie FENG SHUI staje się dostępne, zrozumiałe i naprawdę skuteczne.
+          Pomagamy zrozumieć energię twojego otoczenia i zmienić je tak by
+          pracowało na Twoją korzyść. Pokazujemy, że Feng Shui to strategia
+          która może stać się Twoim największym sprzymierzeńcem.
+          <div class="bottom">
+            <p class="text-bottom">white</p>
+            <img src="./images/grafika.png" class="logoAboutUs" />
+            <p class="text-bottom">lotus</p>
+          </div>
+        </div>
+        <div class="img-aboutUsWrapper">
+          <div class="img-aboutUs">
+            <img src="./images/aboutUs-flower.png" alt="kwiat lotosu" />
+            <div class="chinese-labels">
+              <span>白</span>
+              <span>蓮</span>
+              <span>花</span>
+            </div>
+          </div>
+          <p class="img-caption">feng shui philosophy</p>
         </div>
       </section>
     </div>
