added responsive to aboutUS

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="custom-header">
         <nav class="header-links" id="nav-links">
           <div class="links-wrapper">
-            <a href="#" onclick="openModal('modal1')">O nas</a>
+            <a href="#aboutUs">O nas</a>
             <a href="#" onclick="openModal('shop')">Sklep</a>
             <a href="#" onclick="openModal('kalkulator')">Kalkulator</a>
           </div>
@@ -67,7 +67,7 @@
           </div>
         </div>
       </section>
-      <section class="aboutUs">
+      <section class="aboutUs" id="aboutUs">
         <div class="text-aboutUs shadow-aboutUs">
           <h3>o nas <br /></h3>
           <p>&nbsp;</p>
@@ -90,7 +90,11 @@
         </div>
         <div class="img-aboutUsWrapper">
           <div class="img-aboutUs">
-            <img src="./images/aboutUs-flower.png" alt="kwiat lotosu" />
+            <img
+              src="./images/aboutUs-flower.png"
+              alt="kwiat lotosu"
+              class="lotus-aboutUs"
+            />
             <div class="chinese-labels">
               <span>白</span>
               <span>蓮</span>
