added border in color to aboutFengShui section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600;700&family=Quicksand:wght@400;600;700&family=Lustria&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600;700&family=Quicksand:wght@400;600;700&family=Lustria&family=Cinzel&display=swap"
       rel="stylesheet"
     />
     <script
@@ -44,23 +44,26 @@
     <div class="main-content">
       <section class="aboutFengShui">
         <div class="shadow">
+          <!-- <h1 class="title">o feng shui</h1> -->
+
           <div class="text-Fengshui">
             <h1>o feng shui <br /></h1>
-            <p>&nbsp;</p>
-            <strong>Feng</strong> oznacza wiatr, a <strong>Shui</strong> wodę. W
-            kulturze chińskiej wiatr i woda<br />
-            są kojarzone z dobrym zdrowiem, dlatego dobre Feng Shui zaczęło<br />
-            oznaczać szczęście, podczas gdy złe Feng Shui oznacza pecha<br />
-            lub nieszczęście.
-            <p>&nbsp;</p>
-            Feng Shui opiera się na Taoistycznej wizji i rozumieniu natury,<br />
-            w szczególności na idei, że ziemia jest żywa i wypełniona Chi,<br />
-            czyli energią.
-            <p>&nbsp;</p>
-            Starożytni Chińczycy wierzyli, że energia konkretnej ziemi może<br />
-            albo stworzyć, albo zniszczyć królestwo. Teorie yin i yang,<br />
-            a także pięć elementów feng shui, to niektóre z podstawowych<br />
-            aspektów analizy feng Shui, które pochodzą z Taoizmu.
+            <div class="border-text">
+              <strong>Feng</strong> oznacza wiatr, a <strong>Shui</strong> wodę.
+              W kulturze chińskiej wiatr i woda<br />
+              są kojarzone z dobrym zdrowiem, dlatego dobre Feng Shui zaczęło<br />
+              oznaczać szczęście, podczas gdy złe Feng Shui oznacza pecha<br />
+              lub nieszczęście.
+              <p>&nbsp;</p>
+              Feng Shui opiera się na Taoistycznej wizji i rozumieniu natury,<br />
+              w szczególności na idei, że ziemia jest żywa i wypełniona Chi,<br />
+              czyli energią.
+              <p>&nbsp;</p>
+              Starożytni Chińczycy wierzyli, że energia konkretnej ziemi może<br />
+              albo stworzyć, albo zniszczyć królestwo. Teorie yin i yang,<br />
+              a także pięć elementów feng shui, to niektóre z podstawowych<br />
+              aspektów analizy feng Shui, które pochodzą z Taoizmu.
+            </div>
           </div>
           <div class="img-Fengshui">
             <img src="./images/fengShui.jpg" alt="kompas chiński" />
@@ -70,7 +73,6 @@
       <section class="aboutUs" id="aboutUs">
         <div class="text-aboutUs shadow-aboutUs">
           <h3>o nas <br /></h3>
-          <p>&nbsp;</p>
           Dwie kobiety -dwa Węże, które łączy nie tylko przyjaźń ,ale i głębokie
           zrozumienie tego , co niewidzialne a kluczowe - ENERGII . Jedna z nas
           to urodzona o świcie -MISTRZYNI ZIEMI Yin - z korzeniami sięgającymi
