added place between sections

--- a/index.html
+++ b/index.html
@@ -73,20 +73,23 @@
       <section class="aboutUs" id="aboutUs">
         <div class="text-aboutUs shadow-aboutUs">
           <h3>o nas <br /></h3>
-          Dwie kobiety -dwa Węże, które łączy nie tylko przyjaźń ,ale i głębokie
-          zrozumienie tego , co niewidzialne a kluczowe - ENERGII . Jedna z nas
-          to urodzona o świcie -MISTRZYNI ZIEMI Yin - z korzeniami sięgającymi
-          chińskiej metafizyki, psychologii przestrzeni i estetyki . Druga - to
-          OGIEŃ NOWEGO POKOLENIA: błyskotliwa, konkretna i intuicyjna z pasją do
-          porządku i harmonii, która nie boi się zadawać trudnych pytań i
-          znajdować prostych odpowiedzi. Wspólnie tworzymy świadomą przestrzeń,
-          gdzie FENG SHUI staje się dostępne, zrozumiałe i naprawdę skuteczne.
-          Pomagamy zrozumieć energię twojego otoczenia i zmienić je tak by
-          pracowało na Twoją korzyść. Pokazujemy, że Feng Shui to strategia
-          która może stać się Twoim największym sprzymierzeńcem.
+          <p>
+            Dwie kobiety - dwa Węże, które łączy nie tylko przyjaźń, ale i
+            głębokie zrozumienie tego, co niewidzialne a kluczowe - ENERGII.
+            Jedna z nas to urodzona o świcie -MISTRZYNI ZIEMI Yin - z korzeniami
+            sięgającymi chińskiej metafizyki, psychologii przestrzeni i
+            estetyki. Druga - to OGIEŃ NOWEGO POKOLENIA: błyskotliwa, konkretna
+            i intuicyjna z pasją do porządku i harmonii, która nie boi się
+            zadawać trudnych pytań i znajdować prostych odpowiedzi. Wspólnie
+            tworzymy świadomą przestrzeń, gdzie FENG SHUI staje się dostępne,
+            zrozumiałe i naprawdę skuteczne. Pomagamy zrozumieć energię twojego
+            otoczenia i zmienić je tak by pracowało na Twoją korzyść.
+            Pokazujemy, że Feng Shui to strategia która może stać się Twoim
+            największym sprzymierzeńcem.
+          </p>
           <div class="bottom">
             <p class="text-bottom">white</p>
-            <img src="./images/grafika.png" class="logoAboutUs" />
+            <img src="./images/logoChat.png" class="logoAboutUs" />
             <p class="text-bottom">lotus</p>
           </div>
         </div>
