--- a/index.html
+++ b/index.html
@@ -120,5 +120,6 @@
     <script src="scripts/hamburger.js"></script>
     <script src="scripts/shop.js"></script>
     <script src="scripts/modal.js" defer></script>
+    <script src="scripts/shopDetails.js" defer></script>
   </body>
 </html>
