--- a/modals/shop.html
+++ b/modals/shop.html
@@ -7,38 +7,60 @@
       <div
         class="product"
         data-id="1"
-        data-name="Szkolenie Feng Shui"
-        data-price="199"
+        data-name="FengShui dla Domu lub mieszkania"
+        data-price="699"
       >
         <div class="product-name">
-          <h3>Szkolenie Feng Shui</h3>
-          <p>Cena: 199 zł</p>
+          <h3>FengShui dla Domu lub mieszkania</h3>
+          <a href="#" class="more-link" onclick="openDetailModal('dom')">
+            więcej
+          </a>
+          <p>Cena: 699 zł</p>
         </div>
         <button class="add-to-cart">Dodaj do koszyka</button>
       </div>
-
       <div
         class="product"
         data-id="2"
-        data-name="Charakterystyka Osobista"
-        data-price="1 "
+        data-name="Charakterystyka Urodzeniowa Bazi"
+        data-price="899"
       >
         <div class="product-name">
-          <h3>Charakterystyka Osobista</h3>
-          <p>Cena: 1 zł</p>
+          <h3>Charakterystyka Urodzeniowa BaZi</h3>
+          <a href="#" class="more-link" onclick="openDetailModal('bazi')">
+            więcej
+          </a>
+          <p>Cena: 899 zł</p>
         </div>
         <button class="add-to-cart">Dodaj do koszyka</button>
       </div>
-
       <div
         class="product"
         data-id="3"
-        data-name="Analiza Domu"
-        data-price="249"
+        data-name="Analiza Qi Men Dun Jia"
+        data-price="299"
       >
         <div class="product-name">
-          <h3>Analiza Domu</h3>
-          <p>Cena: 249 zł</p>
+          <h3>Analiza Qi Men Dun Jia</h3>
+          <a href="#" class="more-link" onclick="openDetailModal('qimen')">
+            więcej
+          </a>
+          <p>Cena: 299 zł</p>
+        </div>
+        <button class="add-to-cart">Dodaj do koszyka</button>
+      </div>
+      <div
+        class="product"
+        data-id="4"
+        data-name="Prognoza miesięczna"
+        data-price="199"
+      >
+        <div class="product-name">
+          <h3>Prognoza miesięczna</h3>
+          <a href="#" class="more-link" onclick="openDetailModal('')">
+            więcej
+          </a>
+          <p>Cena: 199 zł</p>
         </div>
         <button class="add-to-cart">Dodaj do koszyka</button>
       </div>
