--- a/modals/shop.html
+++ b/modals/shop.html
@@ -12,9 +12,7 @@
       >
         <div class="product-name">
           <h3>FengShui dla Domu lub mieszkania</h3>
-          <a href="#" class="more-link" onclick="openDetailModal('dom')">
-            więcej
-          </a>
+          <a href="#" class="more-link" data-modal-id="dom"> więcej </a>
           <p>Cena: 699 zł</p>
         </div>
         <button class="add-to-cart">Dodaj do koszyka</button>
@@ -27,9 +25,7 @@
       >
         <div class="product-name">
           <h3>Charakterystyka Urodzeniowa BaZi</h3>
-          <a href="#" class="more-link" onclick="openDetailModal('bazi')">
-            więcej
-          </a>
+          <a href="#" class="more-link" data-modal-id="bazi"> więcej </a>
           <p>Cena: 899 zł</p>
         </div>
         <button class="add-to-cart">Dodaj do koszyka</button>
@@ -42,9 +38,7 @@
       >
         <div class="product-name">
           <h3>Analiza Qi Men Dun Jia</h3>
-          <a href="#" class="more-link" onclick="openDetailModal('qimen')">
-            więcej
-          </a>
+          <a href="#" class="more-link" data-modal-id="qimen"> więcej </a>
           <p>Cena: 299 zł</p>
         </div>
         <button class="add-to-cart">Dodaj do koszyka</button>
@@ -57,9 +51,7 @@
       >
         <div class="product-name">
           <h3>Prognoza miesięczna</h3>
-          <a href="#" class="more-link" onclick="openDetailModal('')">
-            więcej
-          </a>
+          <a href="#" class="more-link" data-modal-id="month"> więcej </a>
           <p>Cena: 199 zł</p>
         </div>
         <button class="add-to-cart">Dodaj do koszyka</button>
