--- a/index.html
+++ b/index.html
@@ -17,10 +17,6 @@
       href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600;700&family=Quicksand:wght@400;600;700&family=Lustria&family=Cinzel&display=swap"
       rel="stylesheet"
     />
-    <script
-      type="text/javascript"
-      src="https://cdn.emailjs.com/dist/email.min.js"
-    ></script>
     <script src="https://www.paypal.com/sdk/js?client-id=AVb-LIgyje56sh1EUwLW1jtdyZv1UBcWejZfgbvw81TkY6tJNvDzz4XuGbhdQEBQHRSuRARHh0v_avob&currency=PLN"></script>
   </head>
   <body>
@@ -118,8 +114,9 @@
     <div id="modals-container"></div>
     <script src="scripts/fengshui.js"></script>
     <script src="scripts/hamburger.js"></script>
+    <script src="scripts/modal.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <script src="scripts/shop.js"></script>
-    <script src="scripts/modal.js" defer></script>
-    <script src="scripts/shopDetails.js" defer></script>
+    <script src="scripts/shopDetails.js"></script>
   </body>
 </html>
