added shop details

--- a/modals/shopDetails/bazi.html
+++ b/modals/shopDetails/bazi.html
@@ -2,6 +2,46 @@
   <div class="modal-content">
     <span class="close">&times;</span>
     <h2>Charakterystyka Urodzeniowa BaZi</h2>
-    <p>Szczegółowe informacje o Charakterystyce Urodzeniowej BaZi...</p>
+    <p class="dom-paragraph">
+      Poznaj swoją unikalną mapę energetyczną –
+      <strong>Charakterystyka Urodzeniowa BaZi</strong>
+    </p>
+    <p class="dom-paragraph">
+      BaZi, czyli Cztery Filary Przeznaczenia, to starożytna chińska metoda
+      analizy osobistego kodu energetycznego na podstawie daty i godziny
+      urodzenia. Dzięki BaZi poznasz swoje naturalne talenty, potencjał, a także
+      wyzwania, które mogą się pojawić na Twojej drodze życiowej.
+    </p>
+
+    <h2 class="dom-subtitle">Co zyskasz dzięki analizie BaZi?</h2>
+    <ul class="dom-list">
+      <li>Szczegółowy opis Twojej osobowości i wrodzonych cech charakteru.</li>
+      <li>
+        Zrozumienie mechanizmów Twojej energii, które wpływają na zdrowie,
+        relacje i finanse.
+      </li>
+      <li>
+        Wskazówki, jak najlepiej wykorzystać swoje atuty i łagodzić trudności.
+      </li>
+      <li>
+        Podpowiedzi dotyczące odpowiednich dla Ciebie zawodów, stylu życia oraz
+        momentów sprzyjających ważnym decyzjom.
+      </li>
+    </ul>
+
+    <h2 class="dom-subtitle">Dla kogo jest ta usługa?</h2>
+    <ul class="dom-list">
+      <li>
+        Dla każdego, kto chce lepiej poznać siebie i swoją życiową ścieżkę.
+      </li>
+      <li>
+        Dla osób poszukujących jasnych wskazówek w kwestiach rozwoju osobistego,
+        kariery czy relacji.
+      </li>
+      <li>
+        Dla tych, którzy chcą świadomie kreować swoje życie, korzystając z
+        mądrości BaZi.
+      </li>
+    </ul>
   </div>
 </div>
