--- a/modals/shopDetails/dom.html
+++ b/modals/shopDetails/dom.html
@@ -2,6 +2,60 @@
   <div class="modal-content">
     <span class="close">&times;</span>
     <h2>FengShui dla Domu lub mieszkania</h2>
-    <p>Szczegółowe informacje o FengShui dla Domu lub mieszkania...</p>
+    <p class="dom-paragraph">
+      Zadbaj o harmonię, energię i pomyślność w swoim domu – z pomocą
+      sprawdzonej analizy Feng Shui!
+    </p>
+    <p class="dom-paragraph">
+      Nasza usługa analizy Feng Shui z uwzględnieniem
+      <strong>Rocznych Latających Gwiazd</strong> pomoże Ci odkryć, które rejony
+      Twojego domu lub mieszkania wspierają zdrowie, dobrobyt i relacje, a które
+      mogą przyciągać trudności, konflikty lub stagnację –
+      <em>w konkretnym roku</em>.
+    </p>
+
+    <h2 class="dom-subtitle">Co otrzymasz w ramach usługi?</h2>
+    <ul class="dom-list">
+      <li>
+        Indywidualną analizę energetyczną Twojego domu lub mieszkania na
+        podstawie układu Rocznych Latających Gwiazd.
+      </li>
+      <li>
+        Wskazanie <strong>stref pozytywnych</strong> i
+        <strong>negatywnych</strong> na dany rok wraz z praktycznymi zaleceniami
+        (np. gdzie warto spędzać czas, które rejony aktywować, a których
+        unikać).
+      </li>
+      <li>
+        Porady dotyczące rozmieszczenia mebli, kolorystyki i ewentualnych
+        środków zaradczych (np. talizmany, elementy dekoracyjne).
+      </li>
+      <li>Możliwość zadania pytań i konsultacji online (opcjonalnie).</li>
+    </ul>
+
+    <h2 class="dom-subtitle">Dla kogo jest ta usługa?</h2>
+    <ul class="dom-list">
+      <li>
+        Dla osób, które chcą w pełni wykorzystać
+        <strong>energię przestrzeni</strong> w danym roku.
+      </li>
+      <li>
+        Dla tych, którzy planują <strong>remont, przeprowadzkę</strong> lub
+        ważne zmiany życiowe.
+      </li>
+      <li>
+        Dla każdego, kto chce poczuć się
+        <strong>bezpieczniej i bardziej wspierająco</strong> w swoim otoczeniu.
+      </li>
+    </ul>
+
+    <div class="dom-highlight">
+      <p>
+        <strong>Feng Shui</strong> to nie magia – to świadome zarządzanie
+        energią otoczenia. Dzięki naszej analizie zyskasz wiedzę, jak najlepiej
+        zorganizować swoją przestrzeń w zgodzie z cyklami natury i
+        energetycznymi wzorcami.
+      </p>
+    </div>
   </div>
 </div>
