--- a/modals/shopDetails/month.html
+++ b/modals/shopDetails/month.html
@@ -2,6 +2,48 @@
   <div class="modal-content">
     <span class="close">&times;</span>
     <h2>Prognoza miesięczna</h2>
-    <p>Szczegółowe informacje o Prognozie miesięcznej...</p>
+    <p class="dom-paragraph">
+      Wykorzystaj moc odpowiednio dobranych dat –
+      <strong>Prognoza miesięczna</strong> na każdy aspekt życia
+    </p>
+    <p class="dom-paragraph">
+      Nasza Prognoza miesięczna to praktyczne narzędzie, które pomoże Ci wybrać
+      najkorzystniejsze dni do ważnych działań — od spotkań, przez decyzje
+      zawodowe, aż po działania osobiste i zdrowotne. Dzięki precyzyjnej
+      analizie energii każdego miesiąca zyskasz pewność, że działasz w zgodzie z
+      naturalnym rytmem i przepływem Qi.
+    </p>
+
+    <h2 class="dom-subtitle">Co otrzymasz w Prognozie miesięcznej?</h2>
+    <ul class="dom-list">
+      <li>
+        Wskazanie najlepszych dni na różne aktywności: zawodowe, rodzinne,
+        zdrowotne i inne.
+      </li>
+      <li>
+        Rekomendacje optymalnych terminów na podpisywanie umów, rozpoczęcie
+        projektów, podróże czy ważne rozmowy.
+      </li>
+      <li>
+        Informacje o dniach, których warto unikać, by zapobiec niekorzystnym
+        zdarzeniom.
+      </li>
+      <li>
+        Praktyczne porady, jak wykorzystać energię miesiąca dla swojego sukcesu
+        i harmonii.
+      </li>
+    </ul>
+
+    <h2 class="dom-subtitle">Dla kogo jest ta usługa?</h2>
+    <ul class="dom-list">
+      <li>Dla osób, które chcą świadomie planować swój czas i decyzje.</li>
+      <li>
+        Dla tych, którzy chcą maksymalizować efektywność swoich działań i unikać
+        zbędnych trudności.
+      </li>
+      <li>
+        Dla wszystkich ceniących równowagę między życiem osobistym i zawodowym.
+      </li>
+    </ul>
   </div>
 </div>
