--- a/modals/shopDetails/qimen.html
+++ b/modals/shopDetails/qimen.html
@@ -2,6 +2,41 @@
   <div class="modal-content">
     <span class="close">&times;</span>
     <h2>Analiza Qi Men Dun Jia</h2>
-    <p>Szczegółowe informacje o Analizie Qi Men Dun Jia...</p>
+    <p class="dom-paragraph">
+      Poznaj niezwykłe możliwości <strong>Qi Men Dun Jia</strong> – sztuki
+      strategicznego wykorzystania energii!
+    </p>
+    <p class="dom-paragraph">
+      Qi Men Dun Jia to zaawansowana chińska metoda prognostyczna i
+      strategiczna, która pozwala odkryć najlepsze momenty i sposoby działania,
+      aby podejmować trafne decyzje w życiu, biznesie i relacjach. Dzięki naszej
+      analizie Qi Men Dun Jia zyskasz przewagę i większą pewność w planowaniu
+      ważnych kroków.
+    </p>
+
+    <h2 class="dom-subtitle">Co zyskasz dzięki analizie Qi Men Dun Jia?</h2>
+    <ul class="dom-list">
+      <li>
+        Precyzyjne wskazówki dotyczące optymalnego czasu na działania i decyzje.
+      </li>
+      <li>Zrozumienie energii otoczenia i własnego potencjału.</li>
+      <li>
+        Porady wspierające rozwój kariery, inwestycji i relacji osobistych.
+      </li>
+      <li>Wskazówki, jak unikać przeszkód i maksymalizować szanse sukcesu.</li>
+    </ul>
+
+    <h2 class="dom-subtitle">Dla kogo jest ta usługa?</h2>
+    <ul class="dom-list">
+      <li>Dla osób, które chcą podejmować świadome i strategiczne decyzje.</li>
+      <li>
+        Dla przedsiębiorców, menedżerów i wszystkich, którzy planują ważne
+        działania biznesowe lub życiowe.
+      </li>
+      <li>
+        Dla tych, którzy pragną wykorzystać czas i energię w najbardziej
+        efektywny sposób.
+      </li>
+    </ul>
   </div>
 </div>
